# digit_recognizer

./: CMakeLists.txt  README.md  benchmark.py  benchmark2.py  neural_network_example.py  pytorch_example.py  sgd_3_layers.py  sgd_neural_network.py
include/: data_loader.hpp  layer.hpp
src/: data_loader.cpp  data_loader_train.cpp  layer.cu  main.cu  s1.cpp
